demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app 
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: rlawnsdud/demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
spec:
  selector: 
    app: demo-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
